--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.imgDish-responsive {
+    width: 50%;
+}
+
+@media (min-width: 992px) {
+    .imgDish-responsive {
+        width: 25%;
+    }
+}
