update name for asp-action in breadcrumb

--- a/Views/EditDish/UpdateDish.cshtml
+++ b/Views/EditDish/UpdateDish.cshtml
@@ -8,7 +8,7 @@
 
     <ol class="breadcrumb d-flex justify-content-start p-3 m-5">
         <li class="breadcrumb-item"><a asp-controller="Admin" asp-action="AdminPage">Admin Page</a></li>
-        <li class="breadcrumb-item"><a asp-controller="EditDish" asp-action="EditDishIndex">Edit Dishes</a></li>
+        <li class="breadcrumb-item"><a asp-controller="EditDish" asp-action="EditDish">Edit Dishes</a></li>
         <li class="breadcrumb-item active">Update Dish</li>
     </ol>
 </div>
