--- a/Views/Admin/AdminPage.cshtml
+++ b/Views/Admin/AdminPage.cshtml
@@ -11,10 +11,10 @@
 
     <div>
         <h2 class="text-decoration-underline mt-4">Manage Bookings</h2>
-        <a class="btn btn-primary btn-lg m-3">Go to Manage Bookings</a>
+        <a asp-controller="EditBooking" asp-action="EditBookings" class="btn btn-primary btn-lg m-3">Go to Manage Bookings</a>
 
         <h2 class="text-decoration-underline mt-4">Manage Menu</h2>
-        <a asp-controller="EditDish" asp-action="EditDishIndex" class="btn btn-primary btn-lg m-3">Go to Manage Dishes</a>
+        <a asp-controller="EditDish" asp-action="EditDish" class="btn btn-primary btn-lg m-3">Go to Manage Dishes</a>
 
         <h2 class="text-decoration-underline mt-4">Manage Tables</h2>
         <a class="btn btn-primary btn-lg m-3">Go to Manage Tables</a>
