--- a/Views/EditBooking/EditBookings.cshtml
+++ b/Views/EditBooking/EditBookings.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Edit Bookings";
 }
+@model Booking
 
 <div class="m-3 p-3 text-center">
     <h1 class="display-4 text-center">Edit Bookings</h1>
@@ -11,52 +12,83 @@
     </ol>
 </div>
 
+@if (ViewData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger m-3">
+        <p>@ViewData["ErrorMessage"]</p>
+    </div>
+}
+@if (ViewData["Success"] != null)
+{
+    <div class="alert alert-success m-3">
+        <p>@ViewData["Success"]</p>
+    </div>
+}
+
 <div class="accordion" id="accordionExample">
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                Accordion Item #1
+                Get All Bookings
             </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <a asp-action="AllBookings" asp-controller="EditBooking" class="btn btn-primary">Get All Bookings</a>
             </div>
         </div>
     </div>
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Accordion Item #2
+                Get Booking By ID
             </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <form asp-action="BookingById" asp-controller="EditBooking" method="get">
+                    <fieldset>
+                        <div>
+                            <label for="BookingIdInput" class="form-label mt-4">Booking Id</label>
+                            <input type="number" class="form-control mb-4" id="BookingIdInput" name="BookingId" aria-describedby="BookingId" placeholder="Enter Booking Id:">
+                            <button type="submit" class="btn btn-primary">Get Booking Info</button>
+                        </div>
+                    </fieldset>
+                </form>               
             </div>
         </div>
     </div>
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                Booking By Date
             </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <form asp-action="BookingByDate" asp-controller="EditBooking" method="get">
+                    <fieldset>
+                        <div>
+                            <label for="DateInput" class="form-label mt-4">Booking(s) on Date</label>
+                            <input type="date" class="form-control mb-4" id="DateInput" name="date" aria-describedby="BookingId" placeholder="Enter Date: YYYY-MM-DD">
+                            <button type="submit" class="btn btn-primary">Get Booking(s) on Date</button>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
         </div>
     </div>
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingFour">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Accordion Item #4
+                Bookings Today
             </button>
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-                <strong>This is the Fourth item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <div class="accordion-body">
+                    <a asp-action="BookingToday" asp-controller="EditBooking" class="btn btn-primary">Get Booking(s) Today</a>
+                </div>
             </div>
         </div>
     </div>
