--- a/Views/EditBooking/EditBookings.cshtml
+++ b/Views/EditBooking/EditBookings.cshtml
@@ -95,12 +95,43 @@
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingFive">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                Accordion Item #5
+                Create Booking
             </button>
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample" style="">
             <div class="accordion-body">
-                <strong>This is the fifth item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <form asp-action="CreateBooking" asp-controller="EditBooking" method="post">
+                    <fieldset>
+                        <div class="mb-3">
+                            <label for="UserId" class="form-label">User ID</label>
+                            <input type="int" class="form-control" id="UserId" name="UserIdFk" placeholder="Enter User ID" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="Name" class="form-label">Guest Name</label>
+                            <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Guest Name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="TableId" class="form-label">Table ID</label>
+                            <input type="int" class="form-control" id="TableId" name="TableIdFk" placeholder="Enter Table ID">
+                        </div>
+                        <div class="mb-3">
+                            <label for="StartDateTime" class="form-label">Booking Date & Time</label>
+                            <input type="datetime-local" class="form-control" id="StartDateTime" name="StartDateTime" placeholder="Enter desired Date & Time">
+                        </div>
+                        <div class="mb-3">
+                            <label for="GuestNum" class="form-label">Number of Guests</label>
+                            <input type="int" class="form-control" id="GuestNum" name="GuestNum" placeholder="Enter number of Guests">
+                        </div
+                        <div class="mb-3">
+                            <label for="Phone" class="form-label">Phone Number</label>
+                            <input type="text" class="form-control" id="Phone" name="Phone" placeholder="Enter Phone Number in format: [XXX-XXX-XXXX] ">
+                        </div>
+                        <div class="p-3">
+                             <button type="submit" class="btn btn-primary">Create Booking</button>
+                        </div>
+                       
+                    </fieldset>
+                </form>
             </div>
         </div>
     </div>
