--- a/Views/EditBooking/BookingById.cshtml
+++ b/Views/EditBooking/BookingById.cshtml
@@ -5,7 +5,7 @@
 @model BookingVM  
 
 <div class="m-3 p-3 text-center">  
-    <h1 class="display-4 text-center">Edit Bookings</h1>  
+    <h1 class="display-4 text-center">Booking by ID</h1>  
 
     <ol class="breadcrumb d-flex justify-content-start p-3 m-5">  
         <li class="breadcrumb-item"><a asp-controller="Admin" asp-action="AdminPage">Admin Page</a></li>  
