Fix hyperlink attributes for managing tables
Updated the `asp-controller` and `asp-action` attributes in `AdminPage.cshtml` for the "Go to Manage Tables" link. The `asp-controller` was changed from `EditTables` to `EditTable`, and the `asp-action` was changed from `EditTable` to `EditTables` to ensure the link points to the correct route.

--- a/Views/Admin/AdminPage.cshtml
+++ b/Views/Admin/AdminPage.cshtml
@@ -17,6 +17,6 @@
         <a asp-controller="EditDish" asp-action="EditDish" class="btn btn-primary btn-lg m-3">Go to Manage Dishes</a>
 
         <h2 class="text-decoration-underline mt-4">Manage Tables</h2>
-        <a asp-controller="EditTables" asp-action="EditTable" class="btn btn-primary btn-lg m-3">Go to Manage Tables</a>
+        <a asp-controller="EditTable" asp-action="EditTables" class="btn btn-primary btn-lg m-3">Go to Manage Tables</a>
     </div>  
 </div>
