--- a/Views/EditTable/AllTables.cshtml
+++ b/Views/EditTable/AllTables.cshtml
@@ -37,7 +37,7 @@
         </tr>  
     </thead>  
     <tbody>  
-        @if (ViewData["Tables"] is IEnumerable<dynamic> tables)  
+        @if (Model != null)  
         {  
             foreach (var table in Model)  
             {  
