Add table availability update functionality
Introduced `SetTableAvailabilityDTO` and updated `ITableServices` and `TableServices` to support table availability updates.
Added `AvailableTables` GET and `SetTableAvailability` POST methods in `EditTableController`.
Updated `AllTables.cshtml` to rename column header and added a form in `EditTables.cshtml` for setting table availability.
Improved user feedback and refactored backend logic for robustness.

--- a/Views/EditTable/AllTables.cshtml
+++ b/Views/EditTable/AllTables.cshtml
@@ -33,7 +33,7 @@
             <th>Table Number</th>  
             <th>Capacity</th>  
             <th>Status</th>  
-            <th>Is Available</th>  
+            <th>Availability</th>  
         </tr>  
     </thead>  
     <tbody>  
