--- a/Views/EditTable/EditTables.cshtml
+++ b/Views/EditTable/EditTables.cshtml
@@ -59,6 +59,20 @@
         </h2>  
         <div id="collapseSetTableAvailability" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#editTablesAccordion">  
             <div class="accordion-body">  
+                <form asp-action="SetTableAvailability" asp-controller="EditTable" method="post">
+                    <fieldset>
+                        <div>
+                            <label for="TableIdInput" class="form-label mt-4">Table Id</label>
+                            <input type="number" class="form-control mb-4" id="TableIdInput" name="id" aria-describedby="TableId" placeholder="Enter Table Id:">
+                            <label for="isAvailable" class="form-label">Table Availability</label>
+                            <select id="IsAvailable" name="IsAvailable" class="form-control mb-4">
+                                <option value="true">True</option>
+                                <option value="false">False</option>
+                            </select>
+                            <button type="submit" class="btn btn-primary">Set Table Availability</button>
+                        </div>
+                    </fieldset>
+                </form>  
             </div>  
         </div>  
     </div>  
